AddUserToGroup and removeUserFromGroup api
